Corrected various broken and redirected links, mostly on primary_groups.shtml

--- a/seven-for-hyperion-users.html
+++ b/seven-for-hyperion-users.html
@@ -370,7 +370,7 @@ registration (as is required for SASL), or afterwards, to enable
 identify-msg.</li>
 </ul>
 <p>For those implementing support for it, a full specification is at
-<tt class="docutils literal"><span class="pre">http://www.leeh.co.uk/draft-mitchell-irc-capabilities-02.html</span></tt>.</p>
+<tt class="docutils literal"><span class="pre">https://tools.ietf.org/html/draft-mitchell-irc-capabilities-01</span></tt>.</p>
 </div>
 </div>
 </body>
